--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "license"           : "GPL-3.0+",
   "require"           : {
-    "illuminate/support"                  : "5.5.*",
+    "illuminate/support"                  : ">=8.0",
     "friendsofphp/php-cs-fixer"           : "^2.6",
     "potsky/microsoft-translator-php-sdk" : "*"
   },
